fix sponsors section styling on mobile

--- a/src/pages/LandingPage/LandingPageComponents/Sponsors/Sponsors.css
+++ b/src/pages/LandingPage/LandingPageComponents/Sponsors/Sponsors.css
@@ -1,8 +1,8 @@
 .sponsors {
     align-content: center;
     text-align: left;
-		color: #444444;
-		background-color: #FDF7DC;
+    color: #444444;
+    background-color: #FDF7DC;
 }
 
 .sponsors-section {
@@ -10,7 +10,7 @@
 }
 
 .sponsors-heading {
-    margin: 0 10% 2rem 10%;
+    margin: 0 11.5rem;
     padding: 3rem 0 0 0;
 }
 
@@ -25,8 +25,8 @@
 	font-family: Inter;
 	font-style: normal;
 	font-weight: normal;
-	margin: 0 10% 0 10%;
-	padding: 5rem 0 5rem 0;
+	margin: 0 11.5rem;
+	padding: 1rem 0 3rem 0;
 }
 
 .sponsors-text a {
@@ -34,7 +34,7 @@
 }
 
 .sponsors-items {
-    margin: 0rem 10% 0rem 10%;
+    margin: 0rem 12% 0rem 12%;
     /* padding: 0 0 4rem 0; */
     display: flex;
     flex-wrap: wrap;
@@ -80,7 +80,7 @@
 } */
 
 .sponsors-giga {
-    /* max-width: 30rem; */
+    width: 100%;
 }
 
 .sponsors-img-giga {
@@ -96,7 +96,7 @@
 }
 
 .sponsors-mega {
-    max-width: 30rem;
+    max-width: 40%;
 }
 
 .sponsors-img-mega {
@@ -112,7 +112,7 @@
 }
 
 .sponsors-kilo {
-    max-width: 30rem;
+    max-width: 40%;
 }
 
 @media (min-width: 1990px) {
@@ -143,8 +143,8 @@
 
 .sponsors-micro {
     transition: 0.2s ease-in-out;
-    max-width: 13vw;
-    max-height: 30px;
+    width: 100%;
+    /* max-height: 30px; */
     margin: 1rem 2rem 1rem 0;
     object-fit: cover;
 }
@@ -171,8 +171,13 @@
         font-size: 1.6rem;
     }
 
+    .sponsors-heading {
+        margin: 0;
+        padding: 1rem 2rem;
+    }
+
     .sponsors-name {
-        font-size: 1rem;
+        font-size: 1.5rem;
         margin: 0.5rem 0 ;
     }
 
@@ -181,6 +186,22 @@
     }
     .sponsors-text {
         font-size: 1rem;
-        padding: 5rem 0 2rem;
+        padding: 2rem 2rem;
+        margin: 0;
+    }
+
+    .sponsors-items {
+        margin: 0rem 2rem;
+        /* padding: 0 0 4rem 0; */
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .sponsors-giga,
+    .sponsors-mega,
+    .sponsors-kilo,
+    .sponsors-micro {
+        margin-left: 0;
+        max-width: 100%;
     }
 }
